adds missing areaType

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -5250,6 +5250,10 @@ cards:
 
       - heading: Data table
         tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
 
         fields:
           - label: Report date
