attempt to fix params

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -5231,6 +5231,10 @@ cards:
     tabs:
       - heading: Chart
         tabType: percentageWaffle
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
 
         fields:
           - label: 1st dose (%)
@@ -5250,6 +5254,10 @@ cards:
 
       - heading: Data table
         tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
 
         fields:
           - label: Report date
